# MLOps_HW

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_env.sh
docs/: mkdocs.yml
docs/docs/: index.md
minio_data/.minio.sys/: format.json
mlops/: data_processor.py  greetings.py  hello.py  main_pipeline.py  pr_demo.py  s3_handler.py  test_script.py
scripts/: run_pipeline.sh  start_minio.ps1  start_minio.sh  stop_minio.ps1  stop_minio.sh
