[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops"
version = "0.0.1"
description = "MLOps homework"
authors = [
  { name = "Elisei Borovkov" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"

dependencies = [
    "boto3>=1.34.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "pre-commit",
]

[tool.ruff]
line-length = 99
src = ["mlops"]
include = ["pyproject.toml", "mlops/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["mlops"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.10" # Укажите версию, соответствующую requires-python
strict = true
exclude = [
    "__pycache__"
]